refactor for Task dependencies to be added via taskId